<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/productNameTxt"
    android:layout_width="match_parent"
    android:background="#949ca4"
    android:layout_height="match_parent">

    <GridLayout
        android:id="@+id/gridLayout"
...
        android:layout_height="0dp"
        android:layout_marginEnd="91dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <Button
        android:id="@+id/addBtn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:background="@drawable/header_background"
        android:backgroundTint="#272928"
        android:text="Add to cart"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/relativeLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/relativeLayout"
...
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/homeBtn"
            android:layout_width="0dp"
            android:onClick="home"
            android:layout_height="match_parent"
            android:layout_weight=".25"
            android:backgroundTint="#272928"
            android:src="@drawable/ic_home_pink"/>

        <ImageButton
            android:id="@+id/searchBtn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".25"
            android:backgroundTint="#272928"
            android:onClick="search"
            android:src="@drawable/ic_pink_search"/>

        <ImageButton
            android:id="@+id/barcodeBtn"
            android:layout_width="0dp"
            android:layout_weight=".25"
...
        <ImageButton
            android:id="@+id/cartBtn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:backgroundTint="#272928"
            android:layout_weight=".25"
            android:onClick="cart"
            android:src="@drawable/ic_basket"/>
    </LinearLayout>

    <RadioGroup
        android:id="@+id/radioGroupSizes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:orientation="horizontal"
...
            android:text="Small"
            android:textAlignment="center"
            android:textColor="@drawable/text_color"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/radioButtonM"
            android:layout_width="0dp"
            android:layout_weight=".33"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:background="@drawable/radio_selector"
            android:button="@android:color/transparent"
            android:elevation="4dp"
            android:padding="16dp"
            android:text="Medium"
            android:textAlignment="center"
            android:textColor="@drawable/text_color"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/radioButtonL"
...
