...
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:itemCount="3"
        tools:listitem="@layout/cartlist" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cartInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        app:layout_constraintBottom_toTopOf="@+id/relativeLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">
...
            android:text="Total:"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@+id/couponValue"
            app:layout_constraintTop_toBottomOf="@+id/couponValue" />

        <TextView
            android:id="@+id/totalAmountTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="0.0"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/textView6"
            app:layout_constraintStart_toEndOf="@+id/textView6"
            app:layout_constraintTop_toTopOf="@+id/textView6" />

        <Button
            android:id="@+id/payBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:background="@drawable/header_background"
            android:backgroundTint="#272928"
            android:text="Pay"
            android:textColor="#FFFFFF"
            app:layout_constraintBottom_toBottomOf="@+id/applyCoupon"
            app:layout_constraintStart_toEndOf="@+id/applyCoupon"
            app:layout_constraintTop_toTopOf="@+id/applyCoupon" />

        <Button
...
            android:textColor="#FFFFFF"
            app:layout_constraintBottom_toBottomOf="@+id/couponValue"
            app:layout_constraintStart_toEndOf="@+id/couponValue"
            app:layout_constraintTop_toTopOf="@+id/couponValue" />

        <Button
            android:id="@+id/clearSale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/header_background"
            android:backgroundTint="#272928"
            android:text="Clear"
            android:textColor="#FFFFFF"
            app:layout_constraintStart_toEndOf="@+id/couponValue"
            app:layout_constraintTop_toBottomOf="@+id/applyCoupon" />

        <EditText
            android:id="@+id/couponValue"
...
