<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#949ca4"
    android:padding="20dp"
    tools:context=".MainActivity">

    <com.stripe.android.view.CardInputWidget
        android:id="@+id/cardInputWidget"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023" />

    <Button
        android:id="@+id/payButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:backgroundTint="#272928"
        android:text="Pay with stripe"
        app:layout_constraintEnd_toEndOf="@+id/cardInputWidget"
        app:layout_constraintStart_toStartOf="@+id/cardInputWidget"
        app:layout_constraintTop_toBottomOf="@+id/cardInputWidget" />
</androidx.constraintlayout.widget.ConstraintLayout>