...
    app:cardCornerRadius="10dp"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:background="#949ca4"
        android:id="@+id/layout"
        android:layout_height="match_parent"
        android:layout_margin="1dp"
        android:elevation="10dp"
        app:layout_constraintEnd_toEndOf="@+id/ProductPrice"
        app:layout_constraintStart_toEndOf="@+id/ProductPrice">

...
            android:layout_marginEnd="91dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageView"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/deleteItem"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="4dp"
            android:background="#949ca4"
            android:src="@drawable/ic_trash_2935441"
...
